--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,18 @@
   <artifactId>servlet-practices</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
+  
+  <properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.build.outputEncoding>UTF-8</project.build.outputEncoding>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
+	</properties>
+	
   <modules>
   	<module>helloweb</module>
+  	<module>emaillist1</module>
+  	<module>guestbook1</module>
   </modules>
+ 
 </project>
